styles.css
:root {
  --white: hsl(0, 0%, 100%);
  --stone-150: hsl(30, 18%, 87%);
  --stone-600: hsl(30, 10%, 34%);
  --stone-900: hsl(24, 5%, 18%);
  --brown-800: hsl(14, 45%, 36%);
  --rose-800: hsl(332, 51%, 32%);
  --rose-50: hsl(330, 100%, 98%);
}

* {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 0;
  background-color: var(--stone-150);
  display: grid;
  place-items: center;
  font-family: Outfit, sans-serif;
  color: var(--stone-600);
}

h1,
h2 {
  font-family: "Young Serif", serif;
  font-weight: 400;
}

h1 {
  font-size: 2.66em;
  color: var(--stone-900);
}

h2 {
  color: var(--brown-800);
}

.container {
  background-color: var(--white);
}

img {
  width: 100%;
}

header > h1,
header > p,
aside,
main {
  margin: 0 10px;
}

header {
  margin-bottom: 20px;
}

hr {
  border: none;
  height: 2px;
  background: var(--stone-150);
}

.time-container {
  border-radius: 10px;
  background-color: var(--rose-50);
  padding: 15px 20px;
}

.time-container h2 {
  font-family: Outfit, sans-serif;
  font-weight: 600;
  color: var(--rose-800);
  margin: 0;
}

.time-container dl {
  margin: 0;
}

dt {
  display: inline list-item;
}

dt::marker {
  color: var(--rose-800);
  font-size: 0.75rem;
}

dd {
  display: inline;
  margin: 0;
}

dd::after {
  content: "\A";
  white-space: pre;
}

dt::after {
  content: ": ";
}

li::marker {
  color: var(--brown-800);
}

ul li::marker {
  font-size: 0.75rem;
}

ol li::marker {
  font-weight: bold;
}

table {
  width: 100%;
  margin-bottom: 20px;
}

table caption {
  text-align: left;
  margin-bottom: 1em;
}

.table-data {
  font-weight: 700;
  color: var(--brown-800);
}

table tr {
  border-bottom: 1px solid var(--stone-150);
}

table tr td {
  padding: 10px;
}

.attribution {
  font-size: 0.6875rem;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

@media screen and (min-width: 650px) {
  .container {
    margin-top: 50px;
    max-width: 650px;
    padding: 40px;
    border-radius: 10px;
  }
  header > h1,
  header > p,
  aside,
  main {
    margin: 0;
  }

  img {
    border-radius: 10px;
  }
}

